feat: docs: update docs && add api register :money_with_wings:
